Minor refactorings